# sdlpal

./: .gitmodules  CMakeLists.txt  audio.h  fight.c  game.c  input.c  input.h  main.c  opusplay.c  palcfg.c  palcfg.h  palcommon.h  palette.c  play.c  scene.c  text.c  threading.c  threading.h  uibattle.c  util.c  video.c  video.h  yj1.c
adplug/: rix.cpp
adplug/dosbox/: dbopl.cpp.h
adplug/mame/: fmopl.cpp.h
dingoo/: Makefile  unix.cpp
dingoo/data/: sdlpal.cfg
emscripten/: Makefile  main.js
libmad/: fixed.h
opendingux/: Makefile
opendingux/data/: default.gcw0.desktop  sdlpal.cfg
sdl_compat/: sdl_compat.h
timidity/: timidity.c
win32/: Makefile  Makefile.mingw  native_midi.cpp  sdlpal.vcxproj
winrt/SDLPal.UWP/: SDLPal.Core.vcxproj
